# naiveui-nuxt-admin

./: LICENSE  README.md  main.py  pyproject.toml
frontend/: app.config.ts  app.vue  nuxt.config.ts  package.json  tailwind.config.ts
frontend/components/layout/: Header.vue  Menu.vue  Sider.vue
frontend/composables/stores/: setting.ts
frontend/composables/web/: useAuth.ts
frontend/content/1.guide/: 0.index.md
frontend/layouts/: admin.vue
frontend/middleware/: admin.ts  auth.global.ts
frontend/pages/: index.vue
frontend/pages/admin/: dashboard.vue
frontend/pages/docs/: user.vue
static/: 200.html  404.html  index.html
static/_nuxt/: 4Q8Fp04i.js  7z3UXI53.js  B2arR4LU.js  B4DLD3Ti.js  B7PkEXE1.js  BGY3I0L1.js  B_VlVADz.js  BeZUiwM4.js  BpTYlFA9.js  BsbUORgl.js  BtCgJzkS.js  BvZ2gHUW.js  BwISAKKA.js  C-EaLL0o.js  C43bEMRI.js  CCTeSQdJ.js  CHwRO47Y.js  CNK0Ey9T.js  CQvSTO65.js  CSGOlh8_.js  CUwFCRLN.js  CV7mCLfB.js  CVn-4cS6.js  CXvYUCxK.js  Ca437hww.js  CacPBV-H.js  Carmujiv.js  CvSioink.js  Czduc_o_.js  D-DW_pam.js  D-uGb5nb.js  D3AkF9hY.js  D4wz9_OV.js  DFKLivQv.js  DOYhenIh.js  DR3dKM3l.js  DU5OCS6C.js  DVwXsRDk.js  Db4nY4Xd.js  Dd0_eHOH.js  (+19 more)
static/_nuxt/builds/: latest.json
web/: app.vue  nuxt.config.ts  package.json  uno.config.ts
web/components/: ProFields.vue  ProForm.vue  ProFormDependency.vue  ProFormItem.vue
web/composables/: dynamicRouting.ts  setting.ts  useAuth.ts
web/config/: i18n.ts
web/layouts/: admin.vue
web/locales/: en.json  zh-CN.json
web/pages/admin/: index.vue  (+2 more)
web/plugins/: api.ts  naive-ui.ts
web/utils/: index.ts
(+16 files in other folders)
