[tool.poetry]
name = "naiveui-nuxt-admin"
version = "0.1.0"
description = ""
authors = ["kylin <260987762@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}
authlib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
